Add missing model info properties to openapi definition.
